; ModuleID = '/home/carl/AnghaBench/libgit2/tests/clone/extr_nonetwork.c_custom_origin_name_remote_create.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/clone/extr_nonetwork.c_custom_origin_name_remote_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"my_origin\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @custom_origin_name_remote_create(i32** %0, i32* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = call i32 @GIT_UNUSED(i8* %11)
  %13 = load i8*, i8** %10, align 8
  %14 = call i32 @GIT_UNUSED(i8* %13)
  %15 = load i32**, i32*** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = call i32 @git_remote_create(i32** %15, i32* %16, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %17)
  ret i32 %18
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i32 @git_remote_create(i32**, i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
